building the project

--- a/public/index.html
+++ b/public/index.html
@@ -19,10 +19,10 @@
                 <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
                 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
             <!--  -->
-                <title>Tradie Photo</title>
+                <title>XL Finance</title>
             <!--  -->
                 <!-- <meta name="description" content="Your concise, compelling page summary goes here."> -->
-                <meta name="description" content="Safe travelling, information for Australian Ride Share riders and drivers.">
+                <meta name="description" content="">
             <!--  -->
                 <link rel="canonical" href="https://yourdomain.com/current-page">
 
